# ai-hub-tracking

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  deploy-terraform.sh  docker-compose.yml  renovate.json
.github/: COPILOT-GUIDANCE-UPDATE-SUMMARY.md  copilot-instructions.md
.github/hooks/: hooks.json
.github/instructions/: azure-networking.instructions.md  code-review.instructions.md  copilot.instructions.md
.github/lib/: constants.sh
.github/scripts/: bastion-purge.sh  build-plan-summary.sh  collect-hub-outputs.sh  ensure-bastion.sh  open-bastion-tunnel.sh  terraform_lint.py
.github/workflows/: .builds.yml  .collect-hub-outputs.yml  .deployer-using-secure-tunnel.yml  .deployer.yml  .detect-changes.yml  .integration-tests-using-secure-tunnel.yml  .lint.yml  add-or-remove-module.yml  apim-key-rotation.yml  bastion-add-or-remove.yml  deploy-self-hosted.yml  deploy-using-self-hosted.yml  ephemeral-self-hosted-runner.yml  ghr-self-hosted.yml  main-merge-test-deploy.yml  manual-dispatch.yml  merge-main.yml  pages.yml  portal-deploy.yml  pr-close.yml  pr-open.yml  schedule.yml  terraform-module.yml
azure-proxy/chisel/: Dockerfile  README.md  start-chisel.sh
azure-proxy/privoxy/: Dockerfile  README.md
docs/: README.md  apim-internal-endpoints.html  apim-key-rotation.html  build.sh  cost.html  decisions.html  diagrams.html  document-intelligence.html  faq.html  generate-search-index.js  generate-tf-docs.sh  index.html  language-service-pii.html  oidc-setup.html  playbooks.html  services.html  technical-deep-dive.html  terraform-reference.html  terraform.html  workflows.html
docs/_pages/: _template.html  apim-internal-endpoints.html  apim-key-rotation.html  cost.html  decisions.html  diagrams.html  document-intelligence.html  faq.html  index.html  language-service-pii.html  oidc-setup.html  playbooks.html  services.html  technical-deep-dive.html  terraform-reference.html  terraform.html  workflows.html
docs/_partials/: footer.html  header.html
docs/assets/: search-index.json  search.js
docs/plans/: tenant-credentials-panel.md
functions/apim-key-rotation/: .dockerignore  Dockerfile  README.md  docker-compose.yml  function_app.py  host.json  local.settings.json.example  pyproject.toml
functions/apim-key-rotation/rotation/: config.py
functions/apim-key-rotation/tests/: test_models.py  test_runner.py
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra-ai-hub/: .tflint.hcl  README.md  data.tf  dev.tfvars  locals.tf  main.tf  model-deployments.md  outputs.tf  private-endpoints.tf  prod.tfvars  providers.tf  telemetry.tf  terraform-plan-output.txt  terraform.auto.tfvars  test.tfvars  variables.tf  versions.tf
infra-ai-hub/.test-tenants/: output.tfvars
initial-setup/: README.md  initial-azure-setup.sh
jobs/apim-key-rotation/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
jobs/apim-key-rotation/rotation/: apim.py  config.py  keyvault.py  models.py  runner.py
jobs/apim-key-rotation/tests/: test_keyvault.py  test_runner.py
pii-redaction-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
pii-redaction-service/app/: config.py  language_client.py  logging_config.py  main.py  models.py  orchestrator.py
pii-redaction-service/tests/: test_api.py  test_language_client.py  test_orchestrator.py
ssl_certs/: README.md  create-pfx.sh  csr-gen.sh  upload-cert-direct.sh  upload-cert-keyvault.sh
tenant-onboarding-portal/: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run-local.sh
tests/integration/: README.md  apim-key-rotation.bats  app-gateway.bats  chat-completions.bats  config.bash  document-intelligence-binary.bats  document-intelligence.bats  mistral.bats  pii-chunking.bats  pii-coverage.bats  pii-failure.bats  pii-redaction.bats  pyproject.toml  run-evaluation.py  run-tests.py  run-tests.sh  subscription-key-header.bats  tenant-info.bats  tenant-user-management.bats  test-apim-keys-quick.sh  test-helper.bash  v1-chat-completions.bats  verify-key-rotation.sh
tests/integration/eval_datasets/: chat_quality.jsonl  chat_quality_fluent.jsonl
tests/integration/src/ai_hub_integration/: __init__.py  client.py  config.py  evaluation.py  runner.py
tests/integration/tests/: __init__.py  conftest.py  support.py  test_ai_evaluation.py  test_apim_key_rotation.py  test_app_gateway.py  test_chat_completions.py  test_document_intelligence.py  test_document_intelligence_binary.py  test_mistral.py  test_subscription_key_header.py  test_tenant_info.py  test_v1_chat_completions.py  test_vllm_chat_completions.py
tests/integration/tests/unit/: test_config.py  test_evaluation.py  test_runner.py  test_support.py
(+400 files in other folders)
