[project]
name = "apim-key-rotation"
version = "2.0.0"
description = "APIM subscription key rotation — runs as Container App Job"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.2",
    "azure-keyvault-secrets>=4.10.0",
    "azure-mgmt-apimanagement>=5.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
